chore: fix whatapp number and add constants

--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
   <body>
     {{> body}} {{> header}}
 
-    <a class="app-header__navigation-item nav__link" href="/massage-chair/">Massage Chair</a>
-    {{> main}}
-
-    {{> footer}} {{> scripts}}
+    <a class="app-header__navigation-item nav__link" href="/massage-chair/"
+      >Massage Chair</a
+    >
+    <a
+      class="app-header__navigation-item nav__link"
+      href="/tennis-snooker-game/"
+      >Tennis / Snooker Game</a
+    >
+    <a
+      class="app-header__navigation-item nav__link"
+      href="/commercial-equipment/"
+      >COMMERCIAL GYM EQUIPMENTS</a
+    >
+    {{> main}} {{> footer}} {{> scripts}}
 
     <script type="module" src="/index.js"></script>
   </body>
