--- a/tennis-snooker-game/index.html
+++ b/tennis-snooker-game/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     {{> metas}} {{> links}}
-    <link rel="stylesheet" href="./massage-chair.css" />
-    <title>Massage Chair</title>
+    <link rel="stylesheet" href="./tennis-snooker-game.css" />
+    <title>Tennis / Snooker Game</title>
 
     <!-- Meta Pixel Code -->
     <script>
@@ -30,7 +30,7 @@
         "script",
         "https://connect.facebook.net/en_US/fbevents.js"
       );
-      fbq("init", "701344562690575");
+      fbq("init", "1206386000986304");
       fbq("track", "PageView");
     </script>
     <!-- End Meta Pixel Code -->
@@ -41,7 +41,7 @@
         height="1"
         width="1"
         style="display: none"
-        src="https://www.facebook.com/tr?id=701344562690575&ev=PageView&noscript=1"
+        src="https://www.facebook.com/tr?id=1206386000986304&ev=PageView&noscript=1"
     /></noscript>
     {{> body}} {{> header}} {{> main}} {{> footer}} {{> scripts}}
 
