chore: populate site data complete

--- a/dumbbells-bench/index.html
+++ b/dumbbells-bench/index.html
@@ -3,7 +3,7 @@
   <head>
     {{> metas}} {{> links}}
     <link rel="stylesheet" href="./tennis-snooker-game.css" />
-    <title>COMMERCIAL GYM EQUIPMENTS</title>
+    <title>Dumbbells / Bench</title>
 
     <!-- Meta Pixel Code -->
     <script>
