--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
       href="/commercial-equipment/"
       >COMMERCIAL GYM EQUIPMENTS</a
     >
+    <a
+      class="app-header__navigation-item nav__link"
+      href="/exercise-bike/"
+      >Exercise Bike</a
+    >
+    <a
+      class="app-header__navigation-item nav__link"
+      href="/dumbbells-bench/"
+      >Dumbbells / Bench</a
+    >
     {{> main}} {{> footer}} {{> scripts}}
 
     <script type="module" src="/index.js"></script>
