--- a/tennis-snooker-game/index.html
+++ b/tennis-snooker-game/index.html
@@ -3,7 +3,7 @@
   <head>
     {{> metas}} {{> links}}
     <link rel="stylesheet" href="./tennis-snooker-game.css" />
-    <title>Tennis / Snooker Game</title>
+    <title>Tennis / Snooker game</title>
 
     <!-- Meta Pixel Code -->
     <script>
