--- a/exercise-bike/index.html
+++ b/exercise-bike/index.html
@@ -3,7 +3,7 @@
   <head>
     {{> metas}} {{> links}}
     <link rel="stylesheet" href="./tennis-snooker-game.css" />
-    <title>COMMERCIAL GYM EQUIPMENTS</title>
+    <title>Exercise Bike</title>
 
     <!-- Meta Pixel Code -->
     <script>
