chore: add slimming-abdominal-machines

--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
           />
           <h3>Dumbbells / Bench</h3>
         </a>
+
+        <a href="/slimming-abdominal-machines/" class="category-card">
+          <img src="xxxx" alt="Slimming & Abdominal Machines" />
+          <h3>Slimming / Abdominal Machines</h3>
+        </a>
       </div>
     </main>
 
