--- a/slimming-abdominal-machines/index.html
+++ b/slimming-abdominal-machines/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     {{> metas}} {{> links}}
-    <link rel="stylesheet" href="./commercial-equipment.css" />
-    <title>COMMERCIAL GYM EQUIPMENTS</title>
+    <link rel="stylesheet" href="./slimming-abdominal-machines.css" />
+    <title>Slimming / Abdominal Machines</title>
 
     <!-- Meta Pixel Code -->
     <script>
