--- a/dumbbells-bench/index.html
+++ b/dumbbells-bench/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     {{> metas}} {{> links}}
-    <link rel="stylesheet" href="./tennis-snooker-game.css" />
+    <link rel="stylesheet" href="./dumbbells-bench.css" />
     <title>Dumbbells / Bench</title>
 
     <!-- Meta Pixel Code -->
@@ -30,7 +30,7 @@
         "script",
         "https://connect.facebook.net/en_US/fbevents.js"
       );
-      fbq("init", "xxxxx");
+      fbq("init", "1102087058467441");
       fbq("track", "PageView");
     </script>
     <!-- End Meta Pixel Code -->
@@ -41,7 +41,7 @@
         height="1"
         width="1"
         style="display: none"
-        src="https://www.facebook.com/tr?id=xxxxx&ev=PageView&noscript=1"
+        src="https://www.facebook.com/tr?id=1102087058467441&ev=PageView&noscript=1"
     /></noscript>
     {{> body}} {{> header}} {{> main}} {{> footer}} {{> scripts}}
 
