chore: add treadmil

--- a/index.html
+++ b/index.html
@@ -70,8 +70,13 @@
         </a>
 
         <a href="/slimming-abdominal-machines/" class="category-card">
-          <img src="xxxx" alt="Slimming & Abdominal Machines" />
+          <img src="https://45wg8knj47.ufs.sh/f/wphKuQ5a7nZ8uxAZTmBSs3BNzeqSQw5ymF7DAEoOhr8x4gMC" alt="Slimming & Abdominal Machines" />
           <h3>Slimming / Abdominal Machines</h3>
+        </a>
+
+        <a href="/treadmill/" class="category-card">
+          <img src="https://zxzyub6zq2.ufs.sh/f/OX5ramIp6AH4sBQFb4Xm6MBa3jZXG4nHqh18UtWzsyQNgFlx" alt="Slimming & Abdominal Machines" />
+          <h3>Treadmill</h3>
         </a>
       </div>
     </main>
