patch: update pixel ids

--- a/commercial-equipment/index.html
+++ b/commercial-equipment/index.html
@@ -30,7 +30,7 @@
         "script",
         "https://connect.facebook.net/en_US/fbevents.js"
       );
-      fbq("init", "xxxxx");
+      fbq("init", "1262327422347304");
       fbq("track", "PageView");
     </script>
     <!-- End Meta Pixel Code -->
@@ -41,7 +41,7 @@
         height="1"
         width="1"
         style="display: none"
-        src="https://www.facebook.com/tr?id=xxxxx&ev=PageView&noscript=1"
+        src="https://www.facebook.com/tr?id=1262327422347304&ev=PageView&noscript=1"
     /></noscript>
     {{> body}} {{> header}} {{> main}} {{> footer}} {{> scripts}}
 
